[package]
name = "game_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
# Use bevy_talks with extra features for now:
# * have skill check on choise.
bevy_talks = { version = "0.4.0" }
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_talks = { git = "https://github.com/balp/bevy_talks.git" }
#bevy_talks = { path = "../bevy_talks" }